--- a/index.html
+++ b/index.html
@@ -1,4 +1,36 @@
 <!DOCTYPE HTML>
 <head>
-    <meta http-equiv="refresh" content="0; 2021/06/17/PixelSort.html" />
+
 </head>
+
+<body style="background: black; color:white; ">
+    <h2>Krab's canvas sketches</h2>
+    <ul id="directoryList" style="font-size: 32px;">
+
+    </ul>
+</body>
+
+<script type="text/javascript" src="https://livejs.com/live.js"></script>
+<script>
+
+    async function load() {
+        let masterBranch = await fetch("https://api.github.com/repos/krabcode/canvas/git/trees/master?recursive=1");
+        masterBranch = await masterBranch.json();
+        console.log(masterBranch);
+        let dir = document.getElementById("directoryList");
+        for(let i = masterBranch.tree.length-1; i > 0; i--) {
+            let path = masterBranch.tree[i].path;
+            if(path.endsWith("html") && path !== 'index.html' && !path.startsWith('templates')){
+                let li = document.createElement("li");
+                li.textContent = path.replace(".html", "");
+                li.onclick = function() {
+                    window.location.href = path;
+                }
+                dir.appendChild(li);
+            }
+        }
+    }
+
+    load();
+
+</script>
