--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE HTML>
 <head>
-
 </head>
-
-<body style="background: black; color:white; ">
-    <h2>Krab's canvas sketches</h2>
-    <ul id="directoryList" style="font-size: 32px;">
+<body style="background: hsl(0,0%,12%); color:white; ">
+    <h1>Krab's canvas sketches</h1>
+    <ul class="dir" id="directoryList" style="font-size: 32px; list-style-type: none; margin: 30px">
 
     </ul>
 </body>
@@ -22,10 +20,15 @@
             let path = masterBranch.tree[i].path;
             if(path.endsWith("html") && path !== 'index.html' && !path.startsWith('templates')){
                 let li = document.createElement("li");
-                li.textContent = path.replace(".html", "");
-                li.onclick = function() {
-                    window.location.href = path;
-                }
+                let a = document.createElement("a");
+                a.textContent = path.replace(".html", "")
+                    .replace("/", "-")
+                    .replace("/", "-")
+                    .replace("/", " ");
+                a.href = path;
+
+                li.style.padding = "5px";
+                li.appendChild(a);
                 dir.appendChild(li);
             }
         }
